voxalfa-validator/src/tests/snapshots/voxalfa_validator__tests__utils__trailing_lyric_error.snap
---
source: voxalfa-validator/src/tests/utils.rs
expression: output
---
=== INPUT ===
[#] verses={1}

[$] time={4,4} | voices={S}
---

[S] |d :r !m :f ||
[1] do re mi fa so

=== DIAGNOSTICS ===
error[E023]: trailing lyric, no solfa column matched
 --> trailing_lyric_error.vfa:8:1
  |
 6 | 
   | - add more columns here
 8 | [1] do re mi fa so
   | ^^^^^^^^^^^^^^^^^^ error
