voxalfa-validator/src/tests/snapshots/voxalfa_validator__tests__utils__type_exception_error.snap
---
source: voxalfa-validator/src/tests/utils.rs
expression: output
---
=== INPUT ===
[#] title={1}

---

=== DIAGNOSTICS ===
error[E007]: expected string, got integer
 --> type_exception_error.vfa:2:1
  |
 2 | [#] title={1}
   | ^^^^^^^^^^^^^ error

error[E026]: 'voices' prameter has not been defined
 --> type_exception_error.vfa:4:1
  |
 1 | 
   | - consider adding 'voice' metadata
 4 | ---
   | ^^^ error
