voxalfa-validator/src/tests/snapshots/voxalfa_validator__tests__utils__unknown_directive_error.snap
---
source: voxalfa-validator/src/tests/utils.rs
expression: output
---
=== INPUT ===
;; @invalid foo 
[$] time={4,4} | voices={S}
---
[S] |d :r !m :f ||

=== DIAGNOSTICS ===
error[E033]: unknown compiler directive '@invalid'
 --> unknown_directive_error.vfa:1:1
  |
 1 | 
   | ^ error
