voxalfa-validator/src/tests/snapshots/voxalfa_validator__tests__utils__unknown_metadata_error.snap
---
source: voxalfa-validator/src/tests/utils.rs
expression: output
---
=== INPUT ===
[#] invalid="foo"

---

=== DIAGNOSTICS ===
error[E005]: unknown metadata field 'invalid'
 --> unknown_metadata_error.vfa:2:1
  |
 2 | [#] invalid="foo"
   | ^^^^^^^^^^^^^^^^^ error

error[E026]: 'voices' prameter has not been defined
 --> unknown_metadata_error.vfa:4:1
  |
 1 | 
   | - consider adding 'voice' metadata
 4 | ---
   | ^^^ error
