voxalfa-validator/src/tests/snapshots/voxalfa_validator__tests__utils__unknown_parameter_error.snap
---
source: voxalfa-validator/src/tests/utils.rs
expression: output
---
=== INPUT ===
[$] invalid="foo"

---

=== DIAGNOSTICS ===
error[E006]: unknown parameter 'invalid'
 --> unknown_parameter_error.vfa:2:1
  |
 2 | [$] invalid="foo"
   | ^^^^^^^^^^^^^^^^^ error

error[E026]: 'voices' prameter has not been defined
 --> unknown_parameter_error.vfa:4:1
  |
 1 | 
   | - consider adding 'voice' metadata
 4 | ---
   | ^^^ error
