voxalfa-validator/src/tests/snapshots/voxalfa_validator__tests__utils__unused_lyrics_join_error.snap
---
source: voxalfa-validator/src/tests/utils.rs
expression: output
---
=== INPUT ===
[#] verses={1}

[$] time={4,4} | voices={S}
---

[S] |d :r !m :f ||
[1] do re mi fa\ @@

=== DIAGNOSTICS ===
error[E030]: lyrics join is unused (must be followed by a section)
 --> unused_lyrics_join_error.vfa:8:1
  |
 9 | 
   | - consider adding a next section
 8 | [1] do re mi fa\ @@
   | ^^^^^^^^^^^^^^^^^^^ error
